# docs/swagger.yaml
@@ -8,6 +8,24 @@ definitions:
       subject:
         type: string
     type: object
+  server.provisionRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      subject:
+        type: string
+    required:
+    - subject
+    type: object
+  server.provisionResponse:
+    properties:
+      created:
+        type: boolean
+      userId:
+        type: string
+    type: object
   vo.ErrorVO:
     properties:
       error:
@@ -79,6 +97,40 @@ paths:
       summary: List user identities
       tags:
       - admin
+  /internal/identities/provision:
+    post:
+      consumes:
+      - application/json
+      description: Find or create a User/LoginProfile for an Auth0 subject
+      parameters:
+      - description: Provisioning request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/server.provisionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.provisionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/vo.ErrorVO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/vo.ErrorVO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/vo.ErrorVO'
+      summary: Provision a user identity
+      tags:
+      - internal
   /status/health:
     get:
       description: Health check
